--- a/app/local.properties
+++ b/app/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Oct 28 19:52:56 EDT 2015
+#Sun Nov 01 19:16:11 EST 2015
 sdk.dir=C\:\\Users\\Amanda\\AppData\\Local\\Android\\sdk
