--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="segroup.se.consumersworld" >
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -21,6 +21,11 @@
         <activity
             android:name=".Page2Activity"
             android:label="@string/title_activity_page2"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity
+            android:name=".PAge3Activity"
+            android:label="@string/title_activity_page3"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
     </application>
