--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,8 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
+        //classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath 'com.android.tools.build:gradle:1.5.0'
     }
 }
 apply plugin: 'com.android.application'
@@ -28,8 +29,19 @@ android {
     }
 }
 
+//added a 2nd repository entry to help resolve "compile 'com.google.code.gson:gson:2.5'" dependancy
+repositories
+{
+    mavenCentral() // or jcenter()
+}
+
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.1.0'
+
+    //these are the two dependancies I added for the Fetch class
+    compile 'com.google.code.gson:gson:2.5'
+    compile 'com.googlecode.json-simple:json-simple:1.1.1'
+
 }
