--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,8 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
-        //classpath 'com.android.tools.build:gradle:1.5.0'
+        //classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath 'com.android.tools.build:gradle:1.5.0'
     }
 }
 apply plugin: 'com.android.application'
@@ -20,6 +20,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        //multiDexEnabled true
     }
     buildTypes {
         release {
@@ -30,17 +31,20 @@ android {
 }
 
 //added a 2nd repository entry to help resolve "compile 'com.google.code.gson:gson:2.5'" dependancy
-/*repositories
+repositories
 {
     mavenCentral() // or jcenter()
 }
-*/
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:23.1.0'
-    compile 'com.android.support:design:23.1.0'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:design:23.1.1'
 
     //these are the dependancies I added for the Fetch class
-    //compile 'com.googlecode.json-simple:json-simple:1.1.1'
+    compile('com.googlecode.json-simple:json-simple:1.1.1')
+    {
+        exclude group: 'org.hamcrest', module: 'hamcrest-core'
+    }
 
 }
